--- a/index.html
+++ b/index.html
@@ -123,6 +123,27 @@
         margin: 0.5rem 0;
       }
     }
+
+    nav .links {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 0.5rem;
+    margin-top: 0.5rem;
+  }
+
+  .container {
+    padding: 1rem;
+  }
+
+  h1 {
+    font-size: 1.7rem;
+  }
+
+  h2 {
+    font-size: 1.2rem;
+  }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -142,7 +163,8 @@
     <div class="logo">The Eyes in the Shadow</div>
     <div class="links">
       <a href="index.html">Script</a>
-      <a href="about.html">About</a>
+      <a href="about.html">About the Project</a>
+      <a href="https://deine-webseite.de" target="_blank">About Me</a>
     </div>
   </nav>
 
