--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div class="links">
       <a href="index.html">Script</a>
       <a href="about.html">About the Project</a>
-      <a href="https://deine-webseite.de" target="_blank">About Me</a>
+      <a href="https://htmljulian.github.io/About-Nano/" target="_blank">About me</a>
     </div>
   </nav>
 
