--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+TT
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -115,49 +115,58 @@
       display: none;
       z-index: 1000;
     }
-    @media screen and (max-width: 768px) {
-      
-.navbar {
-    display: flex;
-    justify-content: center; /* horizontal zentrieren */
-    align-items: center;     /* vertikal zentrieren */
-    height: 60px;            /* Beispielhöhe, anpassbar */
-    background-color: #333;  /* Beispielhintergrund */
+    
+nav {
+  background: rgba(0, 0, 0, 0.85);
+  display: flex;
+  justify-content: center; /* Texte horizontal zentrieren */
+  align-items: center;     /* Inhalte vertikal zentrieren */
+  padding: 1rem 2rem;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+  flex-wrap: wrap;
+  text-align: center;
 }
 
-.navbar a {
-    color: white;            /* Textfarbe */
-    text-decoration: none;
-    margin: 0 15px;          /* Abstand zwischen den Links */
-    font-size: 16px;         /* Textgröße */
+nav .logo {
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #58f5b5;
+  margin-bottom: 0.5rem;
+  width: 100%;
 }
 
-.navbar a:hover {
-    text-decoration: underline;
+nav .links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1.5rem;
 }
 
-    text-decoration: none;
-    margin: 0 15px;          /* Abstand zwischen den Links */
-    font-size: 16px;         /* Textgröße */
+nav .links a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.1rem;
+  transition: color 0.3s;
 }
 
-.navbar a:hover {
-    text-decoration: underline;
-} {
-        flex-direction: column;
-      }
-      nav .links a {
-        margin: 0.5rem 0;
-      }
-    }
+nav .links a:hover {
+  color: #58f5b5;
+}
 
-    nav .links {
-    display: flex;
+/* Mobile Anpassung */
+@media screen and (max-width: 768px) {
+  nav .links {
     flex-direction: column;
-    width: 100%;
-    gap: 0.5rem;
-    margin-top: 0.5rem;
+    gap: 0.8rem;
   }
+
+  nav .logo {
+    margin-bottom: 1rem;
+  }
+}
 
   .container {
     padding: 1rem;
