--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('background.jpg') no-repeat center center fixed;
+      background: url('assets/background.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
     }
@@ -39,6 +39,7 @@
       transition: color 0.3s;
     }
     nav .links a:hover { color: #58f5b5; }
+    
     .container {
       max-width: 800px;
       margin: auto;
@@ -71,26 +72,6 @@
         margin: 0.5rem 0;
       }
     }
-
-    nav .links {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    gap: 0.5rem;
-    margin-top: 0.5rem;
-  }
-
-  .container {
-    padding: 1rem;
-  }
-
-  h1 {
-    font-size: 1.7rem;
-  }
-
-  h2 {
-    font-size: 1.2rem;
-  }
   
   @media screen and (max-width: 768px) {
       nav { flex-direction: column; }
@@ -111,7 +92,7 @@
     <div class="logo">The Eyes in the Shadow</div>
     <div class="links">
       <a href="index.html">Script</a>
-      <a href="about.html">About</a>
+      <a href="about.html">About the Project</a>
       <a href="https://htmljulian.github.io/About-Nano/" target="_blank">About me</a>
     </div>
   </nav>
