--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('background.jpg') no-repeat center center fixed;
+      background: url('assets/background.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
     }
@@ -43,9 +43,8 @@
       font-size: 1.1rem;
       transition: color 0.3s;
     }
-    nav .links a:hover {
-      color: #58f5b5;
-    }
+    nav .links a:hover { color: #58f5b5; }
+
     .container {
       max-width: 800px;
       margin: auto;
@@ -115,57 +114,9 @@
       z-index: 1000;
     }
     
-nav {
-  background: rgba(0, 0, 0, 0.85);
-  display: flex;
-  justify-content: center; /* Texte horizontal zentrieren */
-  align-items: center;     /* Inhalte vertikal zentrieren */
-  padding: 1rem 2rem;
-  position: sticky;
-  top: 0;
-  z-index: 10;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.5);
-  flex-wrap: wrap;
-  text-align: center;
-}
-
-nav .logo {
-  font-size: 1.4rem;
-  font-weight: bold;
-  color: #58f5b5;
-  margin-bottom: 0.5rem;
-  width: 100%;
-}
-
-nav .links {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-}
-
-nav .links a {
-  color: white;
-  text-decoration: none;
-  font-size: 1.1rem;
-  transition: color 0.3s;
-}
-
-nav .links a:hover {
-  color: #58f5b5;
-}
 
 /* Mobile Anpassung */
 @media screen and (max-width: 768px) {
-  nav .links {
-    flex-direction: column;
-    gap: 0.8rem;
-  }
-
-  nav .logo {
-    margin-bottom: 1rem;
-  }
-}
 
   .container {
     padding: 1rem;
@@ -191,6 +142,7 @@ nav .links a:hover {
       from { max-height: 0; opacity: 0; }
       to { max-height: 1000px; opacity: 1; }
     }
+  }
   </style>
 </head>
 <body>
